<resources>
    <string name="app_name">CineMates</string>
    <string name="password">Password</string>
    <string name="mail">Mail</string>
    <string name="nick">Nick</string>
    <string name="register">REGISTER</string>
    <string name="google">Google</string>
    <string name="email">Email</string>
    <string name="id">ID</string>
    <string name="todo">TODO</string>
    <string name="Register">Register</string>
    <string name="Login">Login</string>
    <string name="login">LOGIN</string>
    <string name="registrati">Registrati</string>
    <string name="non_hai_un_account">Non hai un account?</string>
    <string name="ultimi_usciti">Ultimi usciti</string>
    <string name="title_home" />
    <string name="title_dashboard" />
    <string name="title_notifications" />
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="string_da_vedere">\'@string/Da vedere\'</string>
    <string name="i_pi_recensiti">I più recensiti</string>
    <string name="i_pi_visti">I PIù visti</string>
    <string name="da_vedere">Da vedere</string>
    <string name="i_preferiti_dagli_utenti">i preferiti dagli utenti</string>
    <string name="i_miei_preferiti">I MIEI PREFERITI</string>
    <string name="text">BOG</string>
    <string name="consigliati_dagli_utenti">CONSIGLIATI DAGLI UTENTI</string>
    <string name="le_mie_liste">LE MIE LISTE</string>
    <string name="nickname">NICKNAME</string>
    <string name="preferiti">PREFERITI</string>
    <string name="ultime_uscite">Ultime uscite</string>
    <string name="film_che_hai_visto">FILM CHE HAI VISTO</string>
    <string name="ti_hanno_consigliato">TI HANNO CONSIGLIATO...</string>
    <string name="textview">TextView</string>
    <string name="condividi">condividi</string>
    <string name="elimina">elimina</string>
    <string name="review_text">TextView</string>
    <string name="recensisci_il_film_insert">Recensisci il film</string>
    <string name="ok">OK</string>
    <string name="annulla">ANNULLA</string>
    <string name="attenzione">ATTENZIONE</string>
    <string name="tornando_alla_schermata_precedente_perderai_i_dati_relativi_alla_recensione_che_si_sta_inserendo">Tornando alla schermata precedente perderai i dati relativi alla recensione che si sta inserendo</string>
</resources>