<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".LoginScreen">


    <view
        android:id="@+id/view"
        class="com.google.android.material.textfield.TextInputLayout"
        android:layout_width="289dp"
        android:layout_height="46dp"
        android:layout_marginTop="316dp"
        android:background="@drawable/rounded_corners"
        android:backgroundTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <view
        android:id="@+id/view5"
        class="com.google.android.material.textfield.TextInputLayout"
        android:layout_width="290dp"
        android:layout_height="45dp"
        android:layout_marginTop="404dp"
        android:background="@drawable/rounded_corners"
        android:backgroundTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/TextLoginEmail"
        android:layout_width="261dp"
        android:layout_height="50dp"
        android:layout_marginTop="316dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:hint="@string/mail"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:singleLine="false"
        app:layout_constraintEnd_toStartOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toEndOf="@+id/view"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/TextLoginPassword"
        android:layout_width="247dp"
        android:layout_height="58dp"
        android:layout_marginTop="396dp"
        android:autofillHints=""
        android:background="@android:color/transparent"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toStartOf="@+id/view5"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toEndOf="@+id/view5"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/LoginButton"
        android:layout_width="290dp"
        android:layout_height="45dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/rounded_corners"
        android:backgroundTint="#1999CE"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/sign_in_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextLoginPassword"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="208dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/Login"
        android:textColor="#FFFFFF"
        android:textSize="54sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/RegisterText"
        android:layout_width="173dp"
        android:layout_height="28dp"
        android:layout_marginBottom="35dp"
        android:text="@string/non_hai_un_account"
        android:textColor="#F6F2F2"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints,UnknownId" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="107dp"
        android:layout_height="78dp"
        android:visibility="invisible"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="152dp"
        tools:layout_editor_absoluteY="327dp" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="556dp"
        android:backgroundTint="#2A3D45"
        android:text="@string/google"
        android:textColor="#DCCFCF"
        app:iconTint="#AA9999"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

    </com.google.android.gms.common.SignInButton>

</androidx.constraintlayout.widget.ConstraintLayout>